--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,62 @@
+
 @import "tailwindcss";
 
 :root {
+  --font-edensor: 'Edensor';
   --background: #ffffff;
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #000000;
   }
+}
+
+
+@font-face {
+  font-family: 'Edensor';
+  src: url('/fonts/Edensor.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-lora), sans-serif;
+}
+
+h1{
+   font-family: var(--font-edensor), sans-serif;
+   font-size: 48px;
+
+}
+
+h2,h4,h5,h6{
+  font-family: var(--font-edensor), sans-serif;
+}
+
+h3{
+  font-family: var(--font-openSans), sans-serif;
+}
+
+button{
+  color: #49372B ;
+  background-color: #D7D1BE;
+  font-size: 18px;;
+  cursor: pointer;
+  transition: ease-in-out;
+  transition-duration: 0.3s;
+
+}
+button:hover{
+  color: #D7D1BE ;
+  background-color:  #49372B;
+
+}
+p{
+  font-size: 18px;
+
 }
