--- a/app/globals.css
+++ b/app/globals.css
@@ -23,10 +23,18 @@
   font-style: normal;
 }
 
+
+@font-face {
+  font-family: 'Sen';
+  src: url('/fonts/Sen-VariableFont_wght.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-lora), sans-serif;
+  font-family: sen, sans-serif;
 }
 
 h1, h2, h4, h5, h6 {
@@ -55,4 +63,5 @@ button:hover {
 
 p {
   font-size: 18px;
+
 }
